# thFHE-TEE

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.base  README.md  dkg.docker.conf  dkg.edl  docker-compose.yml  noise.conf  noise.docker.conf  noise.edl
algebra/: CMakeLists.txt  common.hpp  fields.hpp  galois_ring.hpp  polynomial.hpp  rings.hpp  shamir.hpp  shamir_ring.hpp
algebra/base/: CMakeLists.txt
algebra/polynomial/: CMakeLists.txt  polynomial.hpp
algebra/rings/: CMakeLists.txt  galois_ring.hpp  rings.hpp
algebra/sharing/: CMakeLists.txt  mul.hpp  open.hpp  shamir.hpp  shamir_ring.hpp
docs/: ARCHITECTURE.md
enclave/: CMakeLists.txt  ecalls.cpp  enc.cpp  enclave.conf  private.pem  prog_mpc.h
enclave/common/: CMakeLists.txt  noise_types.h
enclave/mpc/: CMakeLists.txt  bits.h  triples.h
enclave/protocol/: CMakeLists.txt  enclave_protocol_handler.h  prog_mpc.h
enclave/prss/: CMakeLists.txt  prf.h  state.h
host/: CMakeLists.txt  config.cpp  config.hpp  control_protocol.hpp  controller.cpp  grpc_utils.hpp  host.cpp  network.hpp
host/apps/: CMakeLists.txt  keygen_controller_main.cpp  noise_ctl_main.cpp  noise_keygen_main.cpp  noise_party_main.cpp  noise_preproc_main.cpp  noise_preproc_plan_main.cpp  party_node_main.cpp  preprocessing_controller_main.cpp  preprocessing_plan_main.cpp  round_controller_main.cpp
host/config/: CMakeLists.txt  config.cpp  config.hpp
host/dkg/: CMakeLists.txt  artifact_serialization.cpp  artifact_serialization.hpp  dkg_artifacts.hpp  encryption.cpp  encryption.hpp  keygen.cpp  keygen.hpp  params.cpp  params.hpp  planner.cpp  planner.hpp  preprocessing_artifacts.cpp  preprocessing_artifacts.hpp  preprocessing_store.cpp  preprocessing_store.hpp  serialization.cpp  serialization.hpp
host/protocol/: CMakeLists.txt  control_protocol.hpp  grpc_utils.hpp
host/transport/: CMakeLists.txt  network.cpp
proto/: dkg.proto  noise.proto
